"Stream.toList()" method should be used instead of "collectors" when unmodifiable list needed